logs/django-ftp-deploy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/amqp'...
Listing './lib/python3.5/site-packages/amqp/tests'...
Listing './lib/python3.5/site-packages/amqp-1.4.9.dist-info'...
Listing './lib/python3.5/site-packages/anyjson'...
Listing './lib/python3.5/site-packages/anyjson-0.3.3.egg-info'...
Listing './lib/python3.5/site-packages/billiard'...
Listing './lib/python3.5/site-packages/billiard/dummy'...
Listing './lib/python3.5/site-packages/billiard/py3'...
Listing './lib/python3.5/site-packages/billiard/tests'...
Listing './lib/python3.5/site-packages/billiard-3.3.0.23.egg-info'...
Listing './lib/python3.5/site-packages/braces'...
Listing './lib/python3.5/site-packages/braces/views'...
Listing './lib/python3.5/site-packages/celery'...
Listing './lib/python3.5/site-packages/celery/app'...
Listing './lib/python3.5/site-packages/celery/apps'...
Listing './lib/python3.5/site-packages/celery/backends'...
Listing './lib/python3.5/site-packages/celery/backends/database'...
Listing './lib/python3.5/site-packages/celery/bin'...
Listing './lib/python3.5/site-packages/celery/concurrency'...
Listing './lib/python3.5/site-packages/celery/contrib'...
Listing './lib/python3.5/site-packages/celery/events'...
Listing './lib/python3.5/site-packages/celery/fixups'...
Listing './lib/python3.5/site-packages/celery/loaders'...
Listing './lib/python3.5/site-packages/celery/security'...
Listing './lib/python3.5/site-packages/celery/task'...
Listing './lib/python3.5/site-packages/celery/tests'...
Listing './lib/python3.5/site-packages/celery/tests/app'...
Listing './lib/python3.5/site-packages/celery/tests/backends'...
Listing './lib/python3.5/site-packages/celery/tests/bin'...
Listing './lib/python3.5/site-packages/celery/tests/bin/proj'...
Listing './lib/python3.5/site-packages/celery/tests/compat_modules'...
Listing './lib/python3.5/site-packages/celery/tests/concurrency'...
Listing './lib/python3.5/site-packages/celery/tests/contrib'...
Listing './lib/python3.5/site-packages/celery/tests/events'...
Listing './lib/python3.5/site-packages/celery/tests/fixups'...
Listing './lib/python3.5/site-packages/celery/tests/functional'...
Listing './lib/python3.5/site-packages/celery/tests/security'...
Listing './lib/python3.5/site-packages/celery/tests/slow'...
Listing './lib/python3.5/site-packages/celery/tests/tasks'...
Listing './lib/python3.5/site-packages/celery/tests/utils'...
Listing './lib/python3.5/site-packages/celery/tests/worker'...
Listing './lib/python3.5/site-packages/celery/utils'...
Listing './lib/python3.5/site-packages/celery/utils/dispatch'...
Listing './lib/python3.5/site-packages/celery/worker'...
Listing './lib/python3.5/site-packages/celery-3.1.8.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-0.0.8.egg-info'...
Listing './lib/python3.5/site-packages/crispy_forms'...
Listing './lib/python3.5/site-packages/crispy_forms/templates'...
Listing './lib/python3.5/site-packages/crispy_forms/templates/bootstrap'...
Listing './lib/python3.5/site-packages/crispy_forms/templates/bootstrap/layout'...
Listing './lib/python3.5/site-packages/crispy_forms/templates/bootstrap3'...
Listing './lib/python3.5/site-packages/crispy_forms/templates/bootstrap3/layout'...
Listing './lib/python3.5/site-packages/crispy_forms/templates/uni_form'...
Listing './lib/python3.5/site-packages/crispy_forms/templates/uni_form/layout'...
Listing './lib/python3.5/site-packages/crispy_forms/templatetags'...
Listing './lib/python3.5/site-packages/crispy_forms/tests'...
Listing './lib/python3.5/site-packages/crispy_forms/tests/templates'...
Listing './lib/python3.5/site-packages/curl'...
Listing './lib/python3.5/site-packages/django_braces-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/django_crispy_forms-1.4.0.egg-info'...
Listing './lib/python3.5/site-packages/django_ftp_deploy-2.0.0.egg-info'...
Listing './lib/python3.5/site-packages/ftp_deploy'...
Listing './lib/python3.5/site-packages/ftp_deploy/migrations'...
Listing './lib/python3.5/site-packages/ftp_deploy/models'...
Listing './lib/python3.5/site-packages/ftp_deploy/server'...
Listing './lib/python3.5/site-packages/ftp_deploy/server/forms'...
Listing './lib/python3.5/site-packages/ftp_deploy/server/templatetags'...
Listing './lib/python3.5/site-packages/ftp_deploy/server/views'...
Listing './lib/python3.5/site-packages/ftp_deploy/utils'...
Listing './lib/python3.5/site-packages/funtests'...
Listing './lib/python3.5/site-packages/kombu'...
Listing './lib/python3.5/site-packages/kombu/async'...
Listing './lib/python3.5/site-packages/kombu/tests'...
Listing './lib/python3.5/site-packages/kombu/tests/async'...
Listing './lib/python3.5/site-packages/kombu/tests/transport'...
Listing './lib/python3.5/site-packages/kombu/tests/transport/virtual'...
Listing './lib/python3.5/site-packages/kombu/tests/utils'...
Listing './lib/python3.5/site-packages/kombu/transport'...
Listing './lib/python3.5/site-packages/kombu/transport/django'...
Listing './lib/python3.5/site-packages/kombu/transport/django/management'...
Listing './lib/python3.5/site-packages/kombu/transport/django/management/commands'...
Listing './lib/python3.5/site-packages/kombu/transport/django/migrations'...
Listing './lib/python3.5/site-packages/kombu/transport/django/south_migrations'...
Listing './lib/python3.5/site-packages/kombu/transport/sqlalchemy'...
Listing './lib/python3.5/site-packages/kombu/transport/virtual'...
Listing './lib/python3.5/site-packages/kombu/utils'...
Listing './lib/python3.5/site-packages/kombu-3.0.37.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycurl-7.19.5.egg-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/pycurl'...
Listing './share/doc/pycurl/examples'...
Compiling './share/doc/pycurl/examples/basicfirst.py'...
Compiling './share/doc/pycurl/examples/file_upload.py'...
Compiling './share/doc/pycurl/examples/linksys.py'...
***   File "./share/doc/pycurl/examples/linksys.py", line 110
    self.actions.append(("", "F1", role + `ind+1`, octet))
                                          ^
SyntaxError: invalid syntax

Listing './share/doc/pycurl/examples/quickstart'...
Compiling './share/doc/pycurl/examples/quickstart/follow_redirect.py'...
Compiling './share/doc/pycurl/examples/quickstart/form_post.py'...
Compiling './share/doc/pycurl/examples/quickstart/get.py'...
Compiling './share/doc/pycurl/examples/quickstart/get_python2.py'...
Compiling './share/doc/pycurl/examples/quickstart/get_python3.py'...
Compiling './share/doc/pycurl/examples/quickstart/response_headers.py'...
Compiling './share/doc/pycurl/examples/quickstart/response_info.py'...
Compiling './share/doc/pycurl/examples/quickstart/write_file.py'...
Compiling './share/doc/pycurl/examples/retriever-multi.py'...
Compiling './share/doc/pycurl/examples/retriever.py'...
Compiling './share/doc/pycurl/examples/sfquery.py'...
Compiling './share/doc/pycurl/examples/xmlrpc_curl.py'...
***   File "./share/doc/pycurl/examples/xmlrpc_curl.py", line 51
    except pycurl.error, v:
                       ^
SyntaxError: invalid syntax

Listing './share/python-wheels'...
